--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,24 @@
 body {
     background: #3f3f41;
+    margin: 0;
+    padding: 0;
 }
 .container {
     width: 1100px;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
+    padding: 40px 0;
 }
 .container h1 {
-    margin-top: 10px;
+    margin-top: 40px;
+    transform: rotate(270deg);
     color: #565658;
-    writing-mode: vertical-rl;
-    text-orientation: mixed;
+    font-weight: bold;
 }
 .container-input {
     display: flex;
+    justify-content: center;
+    align-items: start;
     width: 50%;
 }
 .container-input form {
@@ -26,6 +30,7 @@ body {
     width: 25%;
 }
 .container-input label {
+    display: block;
     color: #fff;
     margin-bottom: 10px;
 }
@@ -35,9 +40,9 @@ body {
     background: #535355;
     color: #fff;
     margin-bottom: 10px;
-    padding: 10px 15px;
-    border: 1px solid #fff;
-    border-right: 6px;
+    padding: 15px 20px;
+    border-radius: 6px;
+    text-align: center;
 }
 .container-input input[type=submit] {
     width: 45%;
@@ -46,14 +51,19 @@ body {
 }
 .container-output {
     display: flex;
+    align-items: start;
+    justify-content: center;
     width: 50%;
 }
-.container-output table,td {
-    border: 1px solid #fff;
-    border-collapse: collapse;
-    border-radius: 6px;
-}
 .container-output td {
+    border: 1px solid #fff;
+    border-radius: 6px;
     width: 25px;
     height: 25px;
+    color: #fff;
+    text-align: center;
 }
+.first {
+    background: #535355;
+}
+
